WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
85775
[BlackBerry] Cookie parsing issue. If the cookie value provided was (") then the browser creates a session cookie instead.
https://bugs.webkit.org/show_bug.cgi?id=85775
Summary
[BlackBerry] Cookie parsing issue. If the cookie value provided was (") then ...
Jason Liu
Reported
2012-05-06 23:10:31 PDT
Steps to repro: --------------- 1) Visit the page
http://browsertest01.rim.net/test/networking/cookies/setModCookies.php
2) Enable inspector and start inspecting the page using Desktop Chrome 3) Set the cookie value to " and click the button "Modify Value!" 4) On Desktop browser, navigate to the "Resources" Tab and inspect the cookies Expected result: ----------------- 4) A presistant cookie created with value " and expires in one day Actual result: -------------- 4) A session cookie created with value ("; expires=XXXX)
Attachments
Patch
(5.73 KB, patch)
2012-05-09 04:51 PDT
,
Jason Liu
no flags
Details
Formatted Diff
Diff
Patch
(5.73 KB, patch)
2012-05-09 05:05 PDT
,
Jason Liu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jason Liu
Comment 1
2012-05-09 04:51:07 PDT
Created
attachment 140917
[details]
Patch
Jason Liu
Comment 2
2012-05-09 05:05:06 PDT
Created
attachment 140919
[details]
Patch
Rob Buis
Comment 3
2012-05-09 10:39:23 PDT
Hi Jason, (In reply to
comment #2
)
> Created an attachment (id=140919) [details] > Patch
This looks good to me. Have you checked that all other cookie tests still pass?
Jason Liu
Comment 4
2012-05-09 19:37:28 PDT
(In reply to
comment #3
)
> Hi Jason, > > (In reply to
comment #2
) > > Created an attachment (id=140919) [details] [details] > > Patch > > This looks good to me. Have you checked that all other cookie tests still pass?
Yes. I've tested.
Rob Buis
Comment 5
2012-05-09 19:44:55 PDT
Comment on
attachment 140919
[details]
Patch Looks good.
Jason Liu
Comment 6
2012-05-09 19:54:24 PDT
(In reply to
comment #5
)
> (From update of
attachment 140919
[details]
) > Looks good.
Thank you. :)
WebKit Review Bot
Comment 7
2012-05-09 20:30:05 PDT
Comment on
attachment 140919
[details]
Patch Clearing flags on attachment: 140919 Committed
r116601
: <
http://trac.webkit.org/changeset/116601
>
WebKit Review Bot
Comment 8
2012-05-09 20:30:11 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug