[BlackBerry] Cookie parsing issue. If the cookie value provided was (") then the browser creates a session cookie instead. https://bugs.webkit.org/show_bug.cgi?id=85775

Patch by Jason Liu <jason.liu@torchmobile.com.cn> on 2012-05-09
Reviewed by Rob Buis.

Source/WebCore:

Make CookieParser::parseOneCookie handle (cookiename="cookievalue;expires=xxxx) correctly.
This cookie's value is "cookievalue not "cookievalue;expires=xxxx.

Test: http/tests/cookies/single-quoted-value.html

* platform/blackberry/CookieParser.cpp:
(WebCore::CookieParser::parseOneCookie):

LayoutTests:

* http/tests/cookies/script-tests/single-quoted-value.js: Added.
* http/tests/cookies/single-quoted-value-expected.txt: Added.
* http/tests/cookies/single-quoted-value.html: Added.

Canonical link: https://commits.webkit.org/103645@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116601 268f45cc-cd09-0410-ab3c-d52691b4dbfc